1999-09-23  Bob Woodside  <proteus@pcnet.com>

	* fvwm/stack.c (inner_RaiseOrLowerWindow): rearranged the raise
	hacks to insure that raisePanFrames always gets called after we've
	done our dirty work. My previous version broke this.

1999-09-23  Dominik Vogt  <dominik_vogt@gmx.de>

	* libs/WinMagic.c (GetTopAncestorWindow):

	* libs/Slide.c: file renamed to WinMagic.c

1999-09-22  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/session.c (SaveWindowStates):
	(MatchWinToSM):
	(SaveWindowStates):
	fixed position of sticky icons and windows when restarting with
	session management

1999-09-21  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/move_resize.c (resize_window): redraw window decorations after
	aborting an opaque resize

	* fvwm/stack.c (inner_RaiseOrLowerWindow): -Wall fix
	(raise_over_unmanaged): reindented

	* fvwm/move_resize.c (resize_window): fixed broken comment that got
	checked in

1999-09-20  Bob Woodside  <proteus@pcnet.com>

	* fvwm/events.c (HandleButtonPress): Dropped the raise on window
	decoration clicks for ClicToFocusDoesntRaise. This causes double
	raises in a lot of configurations, and seems counter to the sense
	of ClickToFocusDoesntRaise.
	*  fvwm/stack.c (inner_RaiseOrLowerWindow): Changed the Exceed
	Raise Hack not to raise unmanaged windows; this caused problems
	with some apps.

1999-09-21  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/move_resize.c (resize_window):
	(moveLoop):
	(resize_window):
	undraw the outline before dispatching event since this possibly causes
	some graphics to be drawn

	* fvwm/functions.c (CheckActionType): handle expose events while
	waiting for the decision between "C", "M", "H" and "D" in a complex
	function

1999-09-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (resize_window):
	aborting works with opaque resizing
	fixed wandering window when resizing opaque
	fixed window width/height being one pixel less when resizing opaque

1999-09-19  Dominik Vogt  <dominik_vogt@gmx.de>
