@@ -93,7 +93,7 @@ if test "$xpm_LIBS"; then
   my_CPPFLAGS="$CPPFLAGS"
   my_LIBS="$LIBS"
   CPPFLAGS="$CPPFLAGS $xpm_CFLAGS $X_CFLAGS"
-  LIBS="$LIBS $xpm_LIBS $X_LIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS"
+  LIBS="$LIBS $X_LIBS $xpm_LIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS"
   AC_TRY_RUN([#include <X11/xpm.h>
    int main(int c, char **v) {
    return c == 1 ? 0 :
