@@ -11,10 +11,10 @@ FvwmCpp_DEPENDENCIES = $(top_builddir)/libs/libfvwm.a
 ## Xpm note: while this module may not depend on Xpm explicitly,
 ## there are sometimes dependencies through functions in libfvwm
 ## so we might as well link against libXpm, if present.
-LDADD = -L$(top_builddir)/libs -lfvwm $(xpm_LIBS)  \
-    $(X_LIBS) $(X_PRE_LIBS) -lXext -lX11 $(X_EXTRA_LIBS)
+LDADD = -L$(top_builddir)/libs $(X_LIBS) -lfvwm $(xpm_LIBS)  \
+	$(X_PRE_LIBS) -lXext -lX11 $(X_EXTRA_LIBS)
 
-INCLUDES = -I$(top_srcdir) $(xpm_CFLAGS) $(X_CFLAGS) 
+INCLUDES = -I$(top_srcdir) $(xpm_CFLAGS) $(X_CFLAGS)
 AM_CFLAGS = -DFVWM_MODULEDIR=\"$(FVWM_MODULEDIR)\"	\
 	-DFVWM_CONFIGDIR=\"$(FVWM_CONFIGDIR)\"		\
 	-DFVWM_CPP='"$(FVWM_CPP)"'
