@@ -22,9 +22,9 @@ FvwmGtk_DEPENDENCIES = $(top_builddir)/libs/libfvwm.a
 ## Xpm note: while this module may not depend on Xpm explicitly,
 ## there are sometimes dependencies through functions in libfvwm
 ## so we might as well link against libXpm, if present.
-LDADD = -L$(top_builddir)/libs -lfvwm $(xpm_LIBS) \
-    $(X_LIBS) $(X_PRE_LIBS) -lXext -lX11 $(X_EXTRA_LIBS) -lm \
-    $(GTK_LIBS) $(GDK_IMLIB_LIBS)
+LDADD = -L$(top_builddir)/libs $(X_LIBS) -lfvwm $(xpm_LIBS) \
+	$(X_PRE_LIBS) -lXext -lX11 $(X_EXTRA_LIBS) -lm \
+	$(GTK_LIBS) $(GDK_IMLIB_LIBS)
 
 INCLUDES = -I$(top_srcdir) $(xpm_CFLAGS) $(X_CFLAGS) \
     $(GTK_CFLAGS) $(GDK_IMLIB_CFLAGS)
