@@ -17,7 +17,7 @@ YFLAGS = -d
 man_MANS = FvwmScript.1
 EXTRA_DIST = $(man_MANS) BUGS script.h
 
-LDADD = Widgets/libWidgets.a -L$(top_builddir)/libs -lfvwm \
-	$(xpm_LIBS) $(X_LIBS) $(X_PRE_LIBS) -lXext -lX11 $(X_EXTRA_LIBS) -lm
+LDADD = Widgets/libWidgets.a -L$(top_builddir)/libs $(X_LIBS) -lfvwm \
+	$(xpm_LIBS) $(X_PRE_LIBS) -lXext -lX11 $(X_EXTRA_LIBS) -lm
 INCLUDES = -I$(top_srcdir) $(xpm_CFLAGS) $(X_CFLAGS)
 
