@@ -13,7 +13,7 @@ EXTRA_DIST = $(man_MANS) sample.style \
 	   ASSound/ASSound.c ASSound/README \
 	   OffiX/DragAndDrop.h OffiX/DragAndDropTypes.h
 
-LDADD = -L$(top_builddir)/libs -lfvwm $(xpm_LIBS) \
-	$(X_LIBS) $(X_PRE_LIBS) -lXext -lX11 -lm $(X_EXTRA_LIBS)
+LDADD = -L$(top_builddir)/libs $(X_LIBS) -lfvwm $(xpm_LIBS) \
+	$(X_PRE_LIBS) -lXext -lX11 -lm $(X_EXTRA_LIBS)
 
 INCLUDES = -I$(top_srcdir) $(xpm_CFLAGS) $(X_CFLAGS)
