@@ -1,3 +1,10 @@
+1999-09-23  Paul D. Smith  <psmith@gnu.org>
+
+	* fvwm/Makefile.am (LDADD): Move the $(X_LIBS) reference earlier
+	in all LDADD variables, before (for example) the $(xpm_LIBS)
+	reference; sometimes the latter doesn't contain its own -L
+	options, and uses X's.
+
 1999-09-23  Bob Woodside  <proteus@pcnet.com>
 
 	* fvwm/stack.c (inner_RaiseOrLowerWindow): rearranged the raise
